# mips-ae-pylib-refactor

./: .gitignore  ENCRYPTION_COMPATIBILITY.md  ENCRYPTION_DEBUG_FOR_API_TEAM.md  MODERNIZATION_COMPLETE_CELEBRATION.md  PRODUCT_REQUIREMENTS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_MEMORY.md  Pipfile  README.md  TODO.md  TODO.md.backup  atlasexplorer.py  coverage.json  env-example  migrate_phase1.py  phase1_2_summary.py  pyproject.toml  setup.py  test_phase1_2.py  testharness.py
atlasexplorer/: README.md  __init__.py  atlasexplorer.py  migration.py
claude_done/: README.md  claude_documentation_directive.md  encryption_compatibility_success.md  monolithic_target_verification.md  phase1_1_security_modular_foundation.md  phase1_2_core_class_extraction.md  phase1_3_analysis_module_excellence.md  phase1_3_cli_commands_excellence.md  phase1_3_complete_modular_excellence.md  phase1_3_comprehensive_testing.md  phase1_3_core_configuration_excellence.md  phase1_3_experiment_module_enhancement.md  phase1_3_modular_excellence_completion.md  phase1_3_network_api_client_excellence.md  phase1_3_security_encryption_excellence.md  phase2_1_complete_analysis.md  phase2_1_functional_parity_validation.md  phase2_1_tactical_action_plan.md  phase2_2_backward_compatibility_complete.md  phase2_2_week1_kickoff.md  phase2_3_performance_benchmarking_report.md  phase2_4_customer_communication_strategy.md  phase2_comprehensive_roadmap.md  phase2_monolith_deprecation_strategy.md  phase2_progress_summary.md  phase3_1_customer_rollout_execution.md  phase3_1_rollout_execution_report.md  phase3_2_deprecation_timeline_implementation.md  phase3_3_legacy_elimination_completion_report.md  phase3_3_legacy_elimination_execution.md  phase3_legacy_elimination_plan.md
docs/: COMMUNICATION_TEMPLATE_CONSERVATIVE_USER.md  COMMUNICATION_TEMPLATE_EARLY_ADOPTER.md  COMMUNICATION_TEMPLATE_STANDARD_USER.md  CUSTOMER_ROLLOUT_STRATEGY.md  EXECUTIVE_BUSINESS_CASE.md  MIGRATION_GUIDE.md  TECHNICAL_PRESENTATION.md
examples/: ae_multicore.py  ae_singlecore.py
legacy_archive/: archive_metadata_20250903_133349.json
notebooks/: ae_multicore_notebook.ipynb  ae_singlecore_notebook.ipynb
resources/: dhrystone_rv64.elf  mandelbrot_rv64_O0.elf  mandelbrot_rv64_O3.elf  memcpy_rv64.elf
scripts/: phase2_1_demo.py  phase2_2_backward_compatibility.py  phase2_2_demonstration.py  phase2_2_prep.py  phase2_3_completion_summary.py  phase2_3_final_achievement_report.py  phase2_parity_check.py  (+8 more)
(+50 files in other folders)
