[project]
name = "mips-ae-pylib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.3",
    "inquirerpy>=0.3.4",
    "pycryptodome>=3.23.0",
    "pyelftools>=0.32",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[project.optional-dependencies]
# Install with: uv pip install -e .[notebooks]
notebooks = [
    "pandas>=2.2.2",
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    # Optional extras for richer UX (uncomment if desired):
    # "jupyterlab>=4.2.0",
    # "ipywidgets>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

# Optional uv group equivalent (install via: uv pip install -g notebooks)
notebooks = [
    "pandas>=2.2.2",
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.1",
]
