[project]
name = "atlasexplorer"
version = "3.0.0"
description = "MIPS Atlas Explorer Python Library - Advanced CPU Performance Analysis"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "MIPS Technologies", email = "support@mips.com"}
]
license = {text = "MIT"}
keywords = ["performance", "analysis", "cpu", "mips", "simulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "cryptography>=45.0.3",
    "inquirerpy>=0.3.4",
    "psutil>=7.0.0",
    "pycryptodome>=3.23.0",
    "pyelftools>=0.32",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[project.scripts]
atlasexplorer = "atlasexplorer.cli.commands:AtlasExplorerCLI.main"

[project.optional-dependencies]
# Install with: uv pip install -e .[notebooks]
notebooks = [
    "pandas>=2.2.2",
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    # Optional extras for richer UX (uncomment if desired):
    # "jupyterlab>=4.2.0",
    # "ipywidgets>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

# Optional uv group equivalent (install via: uv pip install -g notebooks)
notebooks = [
    "pandas>=2.2.2",
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.1",
]
